pyinterp/pyinterp/pyinterp/tests/must_pass/builtins/list/errors/pop_out_of_range3.py
lst = [1]
lst.pop(-2)